# tree-as-a-service

./: Makefile  elm-package.json  tree-as-a-service.cabal
client/src/: App.elm  Main.elm  State.elm  Types.elm  View.elm
server/: IndexView.hs  Main.hs
