name:                tree-as-a-service
version:             0.1.0.0
build-type:          Simple

cabal-version:       >=1.10

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6.2
                     , aeson
                     , scotty
                     , wai-extra
                     , wai-middleware-static
                     , blaze-html
                     , http-types
                     , cassava
                     , vector
                     , text
                     , bytestring                
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
